fixed the text alignment and the rotating arrow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,7 +24,7 @@ body{
     align-items:center;
     justify-content:center;
     flex-direction:column;
-    padding:450px 30px;
+    padding:450px 20px;
     background-image:linear-gradient(to bottom,var(--sViolet),var(--sBlue));
     background-repeat:no-repeat;
     position: relative;
@@ -36,8 +36,10 @@ body{
     background-color:#fff;
 }
 .container > .illustration{
-    display:grid;
-    place-items:center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 280px;
     height: 100px;
     /* border: 1px solid red; */
 }
@@ -46,8 +48,8 @@ body{
     justify-content: center;
     align-items: center;
     position:relative;
-    top:-108px;
-    left: -12px;
+    top:-60px;
+    left: 28px;
     /* border: 1px solid red; */
 }
 .container > .illustration > .pattern{
@@ -56,7 +58,7 @@ body{
     align-items: center;
     position: absolute;
     top:0px;
-    left:55px;   
+    left:60px;   
 }
 .container > main{
     display: flex;
@@ -92,8 +94,8 @@ body{
     justify-content: space-between;
 }
 .container > main > section > .faq > .item > .head > h6 { 
-    font-size: 0.9em;
-    font-weight: normal;
+    font-size: 0.8em;
+    font-weight: 550;
     color:var(--dDblue);
 }
 .container > main > section > .faq > .item > .head > .arrow{
@@ -101,15 +103,16 @@ body{
     place-items: center;
 }
 .container > main > section > .faq > .item > .body{
-    width: 280px;
     display: none;
-    margin-top: 8px;
-    font-size: 0.8em;
-    line-height: 1.4em;
-    color:var(--VeryDarkGrayishBlue);
 }
 .container > main > section > .faq > .item > .body.active{
     display: block;
+    margin-top: 8px;
+    width: 240px;
+    text-align: justify;
+    font-size: 0.7em;
+    color:var(--VeryDarkGrayishBlue);
+    line-height: 1.4em;
 }
 .container > main > section > .faq > hr{
     outline: none;
@@ -117,4 +120,9 @@ body{
     margin-top: 12px;
     background-color: var(--lightGrayishBlue);
     height: 1px;
+}
+@media screen and (min-width:700px){
+    .container{
+        display: flex;
+    }
 }
